Fix header on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 .content {
-  padding: 3em;
+  padding: 3em 2em;
   margin: 0 auto;
   text-align: center;
 }
@@ -31,6 +31,7 @@
 
   .content {
     max-width: 32em;
+    padding: 3em;
   }
 
 }
